fix(audiobook): update response types and improve caching for the readers